--- a/templates/login.html
+++ b/templates/login.html
@@ -10,9 +10,9 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
 
-    
 
-    
+
+
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -80,36 +80,72 @@
       }
     </style>
 
-    
+
     <!-- Custom styles for this template -->
     <link href="static/styles/index.css" rel="stylesheet">
   </head>
 
 
   <body class="d-flex h-100 text-center text-bg-dark">
-    
+
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
           <h3 class="float-md-start mb-0">Secret Data Portal</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
-            <a class="nav-link fw-bold py-1 px-0" href="/login">Login</a>
+            <a class="nav-link fw-bold py-1 px-0" aria-current="page" href="#">Home</a>
+            <a class="nav-link fw-bold py-1 px-0 active" href="/login" target="_blank">Log In</a>
           </nav>
         </div>
       </header>
 
       <main class="px-3">
-        <h1>Secret Data Portal</h1>
-        <p class="lead">This is a repository of different secret data available across the internet, can be utilized for research purposes.</p>
-        <p class="lead">
-          <a
-                  href="/login"
-                  class="btn btn-lg btn-secondary fw-bold border-white bg-white"
-          >
-            Log In Now
-          </a>
-        </p>
+
+        <div class="step1">
+          <h1>Step 1: Generate "Native App Authorization Code"</h1>
+          <p class="lead">
+            The button below will redirect you to the external webpage for authorization purpose.
+            Please return to this webpage once you have generated the Temporary Authorization Code.
+          </p>
+          <p class="lead">
+            <a
+                    href="/auth" target="_blank"
+                    class="btn btn-lg btn-secondary fw-bold border-white bg-white"
+            >
+              Generate Code
+            </a>
+          </p>
+        </div>
+
+        <div class="step2">
+
+          <h1>Step 2: Generate "Access Token"</h1>
+
+          <p class="lead">
+            Please copy and paste the generated Temporary Authorization Code in the below box.
+            Authorization codes are valid for 10 minutes only.
+          </p>
+
+          <form method="post" action="/auth">
+
+            <p class="lead">
+              <div class="form-group">
+                <input type="text" class="form-control" id="auth_code" placeholder="Native App Authorization Code" name="auth_code">
+              </div>
+            </p>
+
+            <p class="lead">
+              <button
+                    class="btn btn-lg btn-secondary fw-bold border-white bg-white"
+                    type="submit"
+              >
+                Generate Access Token
+              </button>
+            </p>
+
+          </form>
+        </div>
+
       </main>
 
       <footer class="mt-auto text-white-50">
@@ -118,6 +154,6 @@
     </div>
 
 
-    
+
   </body>
 </html>
