--- a/templates/error.html
+++ b/templates/error.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.104.2">
-    <title>Authorization Portal</title>
+    <title>Globus Auth Portal</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
 
@@ -91,7 +91,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-start mb-0">Authorization Portal</h3>
+          <h3 class="float-md-start mb-0">Globus Auth Portal</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link fw-bold py-1 px-0" aria-current="page" href="/">Home</a>
             <a class="nav-link fw-bold py-1 px-0 active" href="#">Log In</a>
