--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.104.2">
-    <title>Secret Data Portal</title>
+    <title>Globus Auth Portal</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
 
@@ -91,7 +91,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-start mb-0">Secret Data Portal</h3>
+          <h3 class="float-md-start mb-0">Globus Auth Portal</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
             <a class="nav-link fw-bold py-1 px-0" href="/logout">Log Out</a>
@@ -100,7 +100,7 @@
       </header>
 
       <main class="px-3">
-        <h1>Secret Data Portal</h1>
+        <h1>Globus Auth Portal</h1>
         <p class="lead">Congratulations, {{ session['name'] }}! <br>You've successfully passed through the authentication process!</p>
         <p class="lead">
           Logged in as:
